Add a bit of info about KDE

--- a/notebooks/non-normal-naive-bayes.ipynb
+++ b/notebooks/non-normal-naive-bayes.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "eb43d453",
    "metadata": {},
    "outputs": [],
@@ -744,6 +744,7 @@
     "        return self\n",
     "\n",
     "    def _joint_log_likelihood(self, X: NDArray[np.float64]) -> NDArray[np.float64]:\n",
+    "        # TODO: Check this implementation again... (It was vibe coded at 2 AM)\n",
     "        joint_log_likelihood = []\n",
     "        for i, y_i in enumerate(self.classes_):\n",
     "            log_likelihood = np.log(self._priors[i]) * np.ones(X.shape[0])\n",
@@ -765,8 +766,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97e42353",
+   "metadata": {},
+   "source": [
+    "This implementation has a `n_bins` hyperparameter that specifies the number of bins to use for the histograms. We will use K-fold cross-validation to find the best value for this hyperparameter. But first, let us perform a quick training run with `bin_count` set to 10, and all the learning data to see how well this classifier performs without any hyperparameter tuning."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "59913d42",
    "metadata": {},
    "outputs": [
@@ -793,10 +802,52 @@
     "\n",
     "y_pred = model.predict(X_test.to_numpy())\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
     "accuracy = accuracy_score(y_test.to_numpy(), y_pred)\n",
     "report = classification_report(y_test.to_numpy(), y_pred)\n",
     "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(report)\n"
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad7fcc54",
+   "metadata": {},
+   "source": [
+    "### Non-normal Naive Bayes Classifier with Kernel Density Estimation\n",
+    "\n",
+    "Next, we will implement a non-normal Naive Bayes classifier that uses kernel density estimation (KDE) for each continuous feature. KDE is a non-parametric way to estimate the probability density function of a random variable famously used for Naive Bayes classifiers (Trevor Hastie et al.). We will use Gaussian kernels for this purpose."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a30cd60",
+   "metadata": {},
+   "source": [
+    "#### Definition of KDE-based Naive Bayes Classifier\n",
+    "\n",
+    "Let $(x_1, ..., x_n)$ be a set of independent and identically distributed samples drawn from some unknown probability density function $f$. The kernel density estimate $\\hat{f}(x)$ of $f$ at a point $x$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\hat{f}(x) = \\frac{1}{n} \\sum_{i=1}^{n} K_h(x - x_i)\n",
+    "$$\n",
+    "\n",
+    "where $K_h$ is the kernel function with bandwidth $h$, a smoothing parameter related to the variance of the estimator. For a Gaussian kernel, this is defined as:\n",
+    "\n",
+    "$$\n",
+    "K_h(u) = \\frac{1}{\\sqrt{2\\pi h^2}} \\exp\\left(-\\frac{u^2}{2h^2}\\right)\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "364310ff",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "- Hastie, T., Tibshirani, R., & Friedman, J. (2001). The Elements of Statistical Learning: Data Mining, Inference, and Prediction: with 200 full-color illustrations. New York: Springer."
    ]
   }
  ],
