Add message about last model

--- a/notebooks/non-normal-naive-bayes.ipynb
+++ b/notebooks/non-normal-naive-bayes.ipynb
@@ -2025,6 +2025,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21f5504f",
+   "metadata": {},
+   "source": [
+    "Seeing as this kind of \"one-dependency\" naive bayes classifier is severely not standard, and doesn't seem to improve performance significantly over the previous model, we will not proceed further with any of these family of models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad7fcc54",
    "metadata": {},
    "source": [
