--- a/notebooks/logisctic-regression.ipynb
+++ b/notebooks/logisctic-regression.ipynb
@@ -40,43 +40,43 @@
    "id": "ce887cc1",
    "metadata": {},
    "source": [
-    "# Data loading (same preprocess as Bayesian LogReg)"
+    "# Data loading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8455b6d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully:\n",
+      "X_train shape: (589448, 17)\n",
+      "X_test shape: (104188, 17)\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"../data/processed/df_preprocessed.csv\", index_col=0)\n",
-    "weights =  pd.read_csv(\"../data/processed/weights.csv\", index_col=0)\n",
-    "df['Weight'] = weights"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c98406c9",
-   "metadata": {},
-   "source": [
-    "# Split train test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "11be7a5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train, data_test = train_test_split(df, test_size=0.2, random_state=42)\n",
-    "weights_train = data_train[\"Weight\"]\n",
-    "weights_test = data_test[\"Weight\"]\n",
-    "X_train = data_train.drop([\"Weight\", \"Label\"], axis=1)\n",
-    "X_test = data_test.drop([\"Weight\", \"Label\"], axis=1)\n",
-    "y_train = data_train[\"Label\"]\n",
-    "y_test = data_test[\"Label\"]"
+    "# Load preprocessed data\n",
+    "train_preprocess = pd.read_csv(\"../data/processed/train_preprocess.csv\")\n",
+    "test_preprocess = pd.read_csv(\"../data/processed/test_preprocess.csv\")\n",
+    "\n",
+    "# Separate features and labels\n",
+    "X_train = train_preprocess.drop([\"Weight\", \"Label\"], axis=1)\n",
+    "X_test = test_preprocess.drop([\"Weight\", \"Label\"], axis=1)\n",
+    "y_train = train_preprocess[\"Label\"]\n",
+    "y_test = test_preprocess[\"Label\"]\n",
+    "\n",
+    "# Extract weights\n",
+    "weights_train = train_preprocess[\"Weight\"]\n",
+    "weights_test = test_preprocess[\"Weight\"]\n",
+    "\n",
+    "print(\"Data loaded successfully:\")\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)"
    ]
   },
   {
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "higgsbosonatlas (3.13.5)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
