--- a/notebooks/bayesian-logistic-regression.ipynb
+++ b/notebooks/bayesian-logistic-regression.ipynb
@@ -687,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "higgsbosonatlas (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -701,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
