--- a/notebooks/logisctic-regression.ipynb
+++ b/notebooks/logisctic-regression.ipynb
@@ -241,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "higgsbosonatlas (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
