Finish all experiments for naive gaussian except BoxCox and KDE

--- a/notebooks/naive-bayes-model-selection.ipynb
+++ b/notebooks/naive-bayes-model-selection.ipynb
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "95b9983a",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,315 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running experiments:  11%|█▏        | 257/2244 [14:25<3:05:26,  5.60s/it, CategoricalAwareBespokeNB with RobustHistogramEstimator on drop-columns]"
+      "Running experiments:  99%|█████████▉| 2223/2244 [3:28:18<01:40,  4.81s/it, BespokeNB with BoxCoxGaussianEstimator on drop-rows]                      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2224/2244 [3:28:24<01:42,  5.14s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2225/2244 [3:28:30<01:42,  5.37s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2226/2244 [3:28:33<01:25,  4.72s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2227/2244 [3:28:39<01:26,  5.07s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2228/2244 [3:28:42<01:11,  4.49s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2229/2244 [3:28:48<01:13,  4.93s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2230/2244 [3:28:51<01:01,  4.41s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2231/2244 [3:28:57<01:02,  4.84s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments:  99%|█████████▉| 2232/2244 [3:29:01<00:52,  4.35s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2233/2244 [3:29:06<00:52,  4.81s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2234/2244 [3:29:10<00:43,  4.33s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2235/2244 [3:29:15<00:43,  4.79s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2236/2244 [3:29:19<00:34,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2237/2244 [3:29:25<00:33,  4.80s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2238/2244 [3:29:28<00:25,  4.31s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2239/2244 [3:29:34<00:23,  4.80s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2240/2244 [3:29:37<00:17,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2241/2244 [3:29:43<00:14,  4.78s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2242/2244 [3:29:46<00:08,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|█████████▉| 2243/2244 [3:29:52<00:04,  4.79s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|██████████| 2244/2244 [3:29:55<00:00,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment failed: Data must be positive.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running experiments: 100%|██████████| 2244/2244 [3:29:55<00:00,  5.61s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]\n"
      ]
     }
    ],
