Change Box-Cox for Yeo Johnson and run failed experiments

--- a/notebooks/naive-bayes-model-selection.ipynb
+++ b/notebooks/naive-bayes-model-selection.ipynb
@@ -37,12 +37,12 @@
     "   2. Robust Gaussian KDE Naive Bayes: A variant of the KDE Naive Bayes that incorporates missingness indicators as additional categorical features. (`bandwidth in [0.05, 0.1, 0.5, 1, 2, None]`, `num_points in [100, 1000, 3000, 5000]`, `range_padding in [0, 0.1, 0.5]`, `laplace_smoothing in <about_the_best_as_in_previous_models> + [0]`)\n",
     "   3. Categorical-Aware Robust Gaussian KDE Naive Bayes: A variant of the Robust KDE Naive Bayes that treats continuous features as independent of one another but dependent on the categorical features. (`bandwidth in [0.05, 0.1, 0.5, 1, 2, None]`, `num_points in [100, 1000, 3000, 5000]`, `range_padding in [0, 0.1, 0.5]`, `laplace_smoothing in <about_the_best_as_in_previous_models> + [0]`)\n",
     "   > **Note:** KDE models are by design lazily evaluated, meaning that training consists on just storing all the training data, and actual density estimation is performed at prediction time. Therefore, they are extremely costly to evaluate. For that reason, an **approximation** is used instead, where a large-enough sample of the feature axis is drawn and the density is estimated at those points only, using them to approximate the density at prediction time via 1-nearest-neighbor.\n",
-    "4. Box-Cox Transformed Gaussian Naive Bayes Variants:\n",
-    "   1. Box-Cox Transformed Gaussian Naive Bayes: A Naive Bayes model that applies a Box-Cox transformation to continuous features before modeling them with Gaussian distributions.\n",
+    "4. Yeo-Johnson Transformed Gaussian Naive Bayes Variants:\n",
+    "   1. Yeo-Johnson Transformed Gaussian Naive Bayes: A Naive Bayes model that applies a Yeo-Johnson transformation to continuous features before modeling them with Gaussian distributions.\n",
     "      1. Dropping rows with missing values\n",
     "      2. Dropping features with missing values\n",
-    "   2. Robust Box-Cox Transformed Gaussian Naive Bayes: A variant of the Box-Cox Transformed Gaussian Naive Bayes that incorporates missingness indicators as additional categorical features. (`laplace_smoothing in [0, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]`)\n",
-    "   3. Categorical-Aware Robust Box-Cox Transformed Gaussian Naive Bayes: A variant of the Robust Box-Cox Transformed Gaussian Naive Bayes that treats continuous features as independent of one another but dependent on the categorical features. (`laplace_smoothing in [0, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]`)\n",
+    "   2. Robust Yeo-Johnson Transformed Gaussian Naive Bayes: A variant of the Yeo-Johnson Transformed Gaussian Naive Bayes that incorporates missingness indicators as additional categorical features. (`laplace_smoothing in [0, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]`)\n",
+    "   3. Categorical-Aware Robust Yeo-Johnson Transformed Gaussian Naive Bayes: A variant of the Robust Yeo-Johnson Transformed Gaussian Naive Bayes that treats continuous features as independent of one another but dependent on the categorical features. (`laplace_smoothing in [0, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]`)\n",
     "\n",
     "\n",
     "> **Note:** In all cases, categorical features are modeled using a multi-class generalization of the Bernoulli distribution ($f(x=i|\\vec{p})=p_i$), while continuous features are modeled using different Density Estimation techniques (Gaussian, KDE, or Histogram)."
@@ -224,7 +224,7 @@
          "type": "string"
         }
        ],
-       "ref": "8dde9091-8715-4914-bcf2-e77d5bf01ecb",
+       "ref": "84704bb5-07a5-4e29-b83a-4f52219bcbbc",
        "rows": [
         [
          "0",
@@ -712,8 +712,8 @@
     "        \"RobustHistogramEstimator\",\n",
     "        \"EagerGaussianKDEstimator\",\n",
     "        \"RobustEagerGaussianKDEstimator\",\n",
-    "        \"BoxCoxGaussianEstimator\",\n",
-    "        \"RobustBoxCoxGaussianEstimator\",\n",
+    "        \"YeoJohnsonGaussianEstimator\",\n",
+    "        \"RobustYeoJohnsonGaussianEstimator\",\n",
     "    ]\n",
     "    dataset: Literal[\"original\", \"drop-rows\", \"drop-columns\"]\n",
     "    num_folds: int\n",
@@ -869,7 +869,7 @@
    "source": [
     "Let us skip the KDE estimators, as they are much much more computationally expensive to run, and perform first the Box-Cox experiments.\n",
     "\n",
-    "#### Box-Cox experiments"
+    "#### Yeo-Johnson experiments"
    ]
   },
   {
@@ -879,7 +879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Box-Cox Gaussian Naive Bayes Variants:\n",
+    "# Yeo-Johnson Gaussian Naive Bayes Variants:\n",
     "\n",
     "# Standard\n",
     "for dataset in [\"drop-rows\", \"drop-columns\"]:\n",
@@ -887,7 +887,7 @@
     "        Experiment(\n",
     "            model_class=\"BespokeNB\",\n",
     "            categorical_estimator_class=\"CategoricalEstimator\",\n",
-    "            continuous_estimator_class=\"BoxCoxGaussianEstimator\",\n",
+    "            continuous_estimator_class=\"YeoJohnsonGaussianEstimator\",\n",
     "            dataset=dataset,\n",
     "            num_folds=10,\n",
     "        )\n",
@@ -899,7 +899,7 @@
     "        Experiment(\n",
     "            model_class=\"BespokeNB\",\n",
     "            categorical_estimator_class=\"RobustCategoricalEstimator\",\n",
-    "            continuous_estimator_class=\"RobustBoxCoxGaussianEstimator\",\n",
+    "            continuous_estimator_class=\"RobustYeoJohnsonGaussianEstimator\",\n",
     "            dataset=dataset,\n",
     "            num_folds=10,\n",
     "            continuous_estimator_params=dict(laplace_smoothing=laplace_smoothing),\n",
@@ -910,7 +910,7 @@
     "        Experiment(\n",
     "            model_class=\"CategoricalAwareBespokeNB\",\n",
     "            categorical_estimator_class=\"RobustCategoricalEstimator\",\n",
-    "            continuous_estimator_class=\"RobustBoxCoxGaussianEstimator\",\n",
+    "            continuous_estimator_class=\"RobustYeoJohnsonGaussianEstimator\",\n",
     "            dataset=dataset,\n",
     "            num_folds=10,\n",
     "            continuous_estimator_params=dict(laplace_smoothing=laplace_smoothing),\n",
@@ -937,7 +937,7 @@
     "import os\n",
     "from typing import Type\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import accuracy_score, classification_report, precision_recall_fscore_support\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
     "\n",
     "sys.path.append(os.path.abspath(\"../\"))\n",
     "\n",
@@ -1034,326 +1034,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "95b9983a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2223/2244 [3:28:18<01:40,  4.81s/it, BespokeNB with BoxCoxGaussianEstimator on drop-rows]                      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2224/2244 [3:28:24<01:42,  5.14s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2225/2244 [3:28:30<01:42,  5.37s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2226/2244 [3:28:33<01:25,  4.72s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2227/2244 [3:28:39<01:26,  5.07s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2228/2244 [3:28:42<01:11,  4.49s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2229/2244 [3:28:48<01:13,  4.93s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2230/2244 [3:28:51<01:01,  4.41s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2231/2244 [3:28:57<01:02,  4.84s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments:  99%|█████████▉| 2232/2244 [3:29:01<00:52,  4.35s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2233/2244 [3:29:06<00:52,  4.81s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2234/2244 [3:29:10<00:43,  4.33s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2235/2244 [3:29:15<00:43,  4.79s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2236/2244 [3:29:19<00:34,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2237/2244 [3:29:25<00:33,  4.80s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2238/2244 [3:29:28<00:25,  4.31s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2239/2244 [3:29:34<00:23,  4.80s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2240/2244 [3:29:37<00:17,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2241/2244 [3:29:43<00:14,  4.78s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2242/2244 [3:29:46<00:08,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|█████████▉| 2243/2244 [3:29:52<00:04,  4.79s/it, BespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|██████████| 2244/2244 [3:29:55<00:00,  4.30s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment failed: Data must be positive.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running experiments: 100%|██████████| 2244/2244 [3:29:55<00:00,  5.61s/it, CategoricalAwareBespokeNB with RobustBoxCoxGaussianEstimator on drop-columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "import warnings\n",
@@ -1366,6 +1050,62 @@
     "with warnings.catch_warnings():\n",
     "    bar = tqdm(total=len(experiments), desc=\"Running experiments\")\n",
     "    for experiment in experiments:\n",
+    "        bar.set_postfix_str(\n",
+    "            f\"{experiment.model_class} with {experiment.continuous_estimator_class} on {experiment.dataset}\"\n",
+    "        )\n",
+    "        bar.refresh()\n",
+    "        try:\n",
+    "            experiment_results.extend(run_cv_experiments(experiment))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Experiment failed: {e}\")\n",
+    "            failed_experiments.append(experiment)\n",
+    "        bar.update(1)\n",
+    "        # Save intermediate results\n",
+    "        df_results = pd.DataFrame([result.model_dump() for result in experiment_results])\n",
+    "        df_results.to_csv(\"../results/naive_bayes_model_selection_results_intermediate.csv\", index=False)\n",
+    "        failed_results = pd.DataFrame([exp.model_dump() for exp in failed_experiments])\n",
+    "        failed_results.to_csv(\"../results/naive_bayes_model_selection_failed_experiments_intermediate.csv\", index=False)\n",
+    "    bar.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "33bcbaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Retrying experiments: 100%|██████████| 22/22 [23:30<00:00, 64.12s/it, CategoricalAwareBespokeNB with RobustYeoJohnsonGaussianEstimator on drop-columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retry failed experiments\n",
+    "from tqdm import tqdm\n",
+    "import warnings\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.seterr(divide=\"ignore\", invalid=\"ignore\")\n",
+    "\n",
+    "retry_experiments: List[Experiment] = pd.read_csv(\n",
+    "    \"../results/naive_bayes_model_selection_failed_experiments_intermediate.csv\"\n",
+    ")\n",
+    "retry_experiments[\"categorical_estimator_params\"] = retry_experiments[\"categorical_estimator_params\"].apply(eval)\n",
+    "retry_experiments[\"continuous_estimator_params\"] = retry_experiments[\"continuous_estimator_params\"].apply(eval)\n",
+    "retry_experiments = [Experiment(**exp) for exp in retry_experiments.to_dict(orient=\"records\")]\n",
+    "experiment_results: List[ExperimentResult] = pd.read_csv(\n",
+    "    \"../results/naive_bayes_model_selection_results_intermediate.csv\"\n",
+    ")\n",
+    "experiment_results[\"categorical_estimator_params\"] = experiment_results[\"categorical_estimator_params\"].apply(eval)\n",
+    "experiment_results[\"continuous_estimator_params\"] = experiment_results[\"continuous_estimator_params\"].apply(eval)\n",
+    "experiment_results = [ExperimentResult(**res) for res in experiment_results.to_dict(orient=\"records\")]\n",
+    "failed_experiments: List[Experiment] = []\n",
+    "with warnings.catch_warnings():\n",
+    "    bar = tqdm(total=len(retry_experiments), desc=\"Retrying experiments\")\n",
+    "    for experiment in retry_experiments:\n",
     "        bar.set_postfix_str(\n",
     "            f\"{experiment.model_class} with {experiment.continuous_estimator_class} on {experiment.dataset}\"\n",
     "        )\n",
