Run the failed experiments

--- a/notebooks/04-naive-bayes-model-selection.ipynb
+++ b/notebooks/04-naive-bayes-model-selection.ipynb
@@ -224,7 +224,7 @@
          "type": "string"
         }
        ],
-       "ref": "3c9311f1-9b5c-422e-8106-439925d699b9",
+       "ref": "d7627b05-8ae4-4682-8fa6-76bf54d36642",
        "rows": [
         [
          "0",
@@ -910,6 +910,20 @@
     "    return experiments\n",
     "\n",
     "\n",
+    "def filter_out_of_experiment_set(cls: Type[T], filename: str, experiment_to_remove: T) -> None:\n",
+    "    \"\"\"Remove an ExperimentResult from a JSONL file.\"\"\"\n",
+    "    if not os.path.exists(filename):\n",
+    "        return\n",
+    "    # Instead of reading everything, and rewriting everything, we can do it in a single pass.\n",
+    "    temp_filename = filename + \".tmp\"\n",
+    "    with open(filename, \"r\") as f_in, open(temp_filename, \"w\") as f_out:\n",
+    "        for line in f_in:\n",
+    "            experiment = cls.model_validate_json(line.strip())\n",
+    "            if experiment != experiment_to_remove:\n",
+    "                f_out.write(line)\n",
+    "    os.replace(temp_filename, filename)\n",
+    "\n",
+    "\n",
     "def run_all_experiments(\n",
     "    experiments: Set[Experiment],\n",
     "    *,\n",
@@ -949,6 +963,10 @@
     "                results.add(new_result)\n",
     "                if results_file is not None:\n",
     "                    append_to_experiment_set(new_result, results_file)\n",
+    "                if failed_file is not None and experiment in already_failed:\n",
+    "                    # If it was previously marked as failed, but now succeeded, we can remove it from the failed file.\n",
+    "                    already_failed.remove(experiment)\n",
+    "                    filter_out_of_experiment_set(Experiment, failed_file, experiment)\n",
     "            finally:\n",
     "                bar.update(1)\n",
     "    finally:\n",
@@ -1166,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1f288993",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running experiments:   2%|▎         | 5/200 [00:14<10:09,  3.13s/it, CategoricalAwareBespokeNB with RobustYeoJohnsonGaussianEstimator on original]"
+      "Running experiments: 0it [00:00, ?it/s]\n"
      ]
     }
    ],
